--- a/Nettside/src/Styles/HomePage.css
+++ b/Nettside/src/Styles/HomePage.css
@@ -23,8 +23,11 @@
 }
 
 .titleOnBox {
-    background-color: rgb(236, 236, 236, 0.95);
-    border-radius: .1em;
+    /* background-color: rgba(255, 255, 255, 0.95); */
+    background-color: whitesmoke;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    border-radius: .3em;
     padding: 2rem 5rem;
     text-decoration: none;
     color: black;
@@ -72,8 +75,9 @@ p {
 
   .snarvei {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 7rem;
+    padding: 2em 0 8em 0;
     text-align: center;
+    background-color: whitesmoke;
   }
 
   .snarvei h2 {
