--- a/Nettside/src/Components/Navbar.css
+++ b/Nettside/src/Components/Navbar.css
@@ -1,7 +1,8 @@
 .navbar-logo {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 23px;
+    font-weight: 600;
     padding: 10px;
 }
 
@@ -33,7 +34,6 @@ li {
     display: block;
     padding: 10px;
 }
-
 
 /* Dette er burger menyen, må fikses */
 nav img {
